2007-06-07  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: When calculating autosize children, default to
	ExplicitSize.  After laying out a container's children, if the container
	is AutoSize, adjust its size if necessary.

2007-05-23  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Take parent's padding into account when docking
	children.

2007-05-07  Jonathan Pobst  <monkey@jpobst.com>
	Applying contributed patch from Stefan Noack.

	* DefaultLayout.cs: Implement AutoSize logic.	

2007-04-24  Andreia Gaita  <avidigal@novell.com>

	* TableLayoutSettingsTypeConverter.cs: Implemented the converters
	for TableLayoutSettings.

2007-04-22  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Use the parent's DisplayRectangle for laying
	out docked children.  [Fixes bug #81397]

2007-04-04  Jonathan Pobst  <monkey@jpobst.com>

	* FlowLayout.cs: Call SetBounds with BoundsSpecified.None instead of
	using Control Size, Location setters.

2007-03-24  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Call SetBounds with BoundsSpecified.None instead
	of using SetImplicitBounds.
	* TableLayout.cs: Call SetBounds with BoundsSpecified.None instead of
	modifying Control.Bounds.

2007-02-28  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Use ClientRectangle instead of DisplayRectangle
	to layout children because DisplayRectangle can be overridden.
	[Fixes bug #80917]

2007-02-14  Jonathan Pobst  <monkey@jpobst.com>

	* FlowLayout.cs: Add support for laying out ToolStrips, which
	use ToolStripItems instead of Controls.

2007-01-29  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: MdiClient should always be added last, it should
	never Dock:Fill under other controls.  [Fixes a part of bug #80223]

2007-01-20  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Remove special loop for Dock.Fill and handle
	it with the other docking code.  [Fixes bug #80227]

2007-01-09  Jonathan Pobst  <monkey@jpobst.com>
