@@ -1,3 +1,9 @@
+2007-06-12  Jonathan Pobst  <monkey@jpobst.com>
+
+	* TableLayout.cs: When we come across a Dock=Fill control, use the
+	ExplicitSize to calculate an AutoSize row/column from.
+	[Fixes bug #81843]
+
 2007-06-07  Jonathan Pobst  <monkey@jpobst.com>
 
 	* DefaultLayout.cs: When calculating autosize children, default to
